// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toBePressed (with element) > should fail for button without aria-pressed 1`] = `
<d>expect(</b><r>element</g><d>).toBePressed()</b>

Expected element to have:
<g>  aria-pressed="true"</g>
Received:
<r>  aria-pressed="null"</g>
`;

exports[`toBePressed (with element) > should fail for non-button 1`] = `Element is not a button or does not have a valid aria-pressed attribute`;

exports[`toBePressed (with element) > should fail for non-button 2`] = `Element is not a button or does not have a valid aria-pressed attribute`;

exports[`toBePressed (with element) > should fail for unpressed button 1`] = `
<d>expect(</b><r>element</g><d>).toBePressed()</b>

Expected element to have:
<g>  aria-pressed="true"</g>
Received:
<r>  aria-pressed="false"</g>
`;

exports[`toBePressed (with locator) > should fail for button without aria-pressed 1`] = `
<d>expect(</b><r>element</g><d>).toBePressed()</b>

Expected element to have:
<g>  aria-pressed="true"</g>
Received:
<r>  aria-pressed="null"</g>
`;

exports[`toBePressed (with locator) > should fail for non-button 1`] = `Element is not a button or does not have a valid aria-pressed attribute`;

exports[`toBePressed (with locator) > should fail for non-button 2`] = `Element is not a button or does not have a valid aria-pressed attribute`;

exports[`toBePressed (with locator) > should fail for unpressed button 1`] = `
<d>expect(</b><r>element</g><d>).toBePressed()</b>

Expected element to have:
<g>  aria-pressed="true"</g>
Received:
<r>  aria-pressed="false"</g>
`;
